arreglos en index

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -83,13 +83,23 @@
         </ul>
     </div>
 
+    <!--PARALLAX-->
     <div class="parallax-container">
         <div class="parallax"><img src="../../static/core/img/parallax.jpg"></div>
     </div>
-    <div class="fondo2">
 
+    <div class="fondo2 container center">
+        <div class="row">
+            <div class="col s10 offset-s1">
+                <i class="large material-icons">people_outline</i>
+                <p class="flow-text">Quienes Somos</p>
+                <p class="light flow-text">
+                    Somos un negocio familiar enfocado en hacer bla bla siempre comprometidos con entregar el mejor
+                    servicio. Además considerando calidad y economia para su bolsillo.
+                </p>
+            </div>
+        </div>
     </div>
-
     <!--FOOTER-->
     <footer class="page-footer blue">
         <div class="container">
